--- a/ximeraUserManual/coverArt/frontCover.tex
+++ b/ximeraUserManual/coverArt/frontCover.tex
@@ -17,7 +17,7 @@
   \bfseries % Makes all text bold
   \color{txtcr}
   \sffamily\flushleft%
-  \!\resizebox{!}{1cm}{\input{../wormLogo/tikzLogo.tex}}\\[0cm]%
+  \!\resizebox{!}{1cm}{\input{tikzLogo.tex}}\\[0cm]%
   Interactive\\
   Mathematics\\
   Education\\
@@ -30,7 +30,7 @@
     \scalebox{3}{Fowler $\bullet$ Obbels $\bullet$ Nowell $\bullet$ Snapp}
   \end{center}
   \small This document was typeset on \today. \hfill \Large\textsf{\ccbyncsa}\\
-  \small\texttt{GIT COMMIT: \input{../.git/refs/heads/master}}\\
+  \small\texttt{GIT COMMIT: \input{../.git/refs/heads/minimal}}\\
   \small Source: {\hypersetup{allcolors=txtcr}\docURL}\hfill developed in \textbf{XIMERA}
 \clearpage\pagecolor{white}\color{black}\unboldmath\normalfont\restoregeometry
 \ifnotoc
