--- a/ximeraUserManual/ximeraUserManual.tex
+++ b/ximeraUserManual/ximeraUserManual.tex
@@ -2,9 +2,12 @@
 
 \title{User Manual}
 
+\input{preamble}
+
+
 \usepackage{manual}
 
-\usepackage{forest}
+%\usepackage{forest}
 
 \definecolor{folderbg}{RGB}{124,166,198}
 \definecolor{folderborder}{RGB}{110,144,169}
