--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -1,12 +1,14 @@
 \documentclass{ximera}
 
-\title{Setup}
+\input{../preamble.tex}
+
+\title{Setup a GitHub repository}
 
 \author{Bart Snapp}
 
 \begin{document}
 \begin{abstract}
-  How to set up your Ximera files.
+  How to set up your Ximera files in GitHub.
 \end{abstract}
 \maketitle
 
@@ -144,7 +146,12 @@ These will both appear on the course website in the navigation area, so the
 abstract should be short. At this stage your activity contains a title and an
 abstract, but is otherwise blank.
 
-\item Type \verb!xake bake! to compile the tex documents, then
+
+
+
+
+
+Type \verb!xake bake! to compile the tex documents, then
 \verb!xake frost! to create a publication commit on top of your source
 commit.
 Finally type \verb!xake serve! to share your content with the world.
@@ -152,7 +159,12 @@ For
 instance, my content will appear at
 https://ximera.osu.edu/turnloon/anExampleCourse
 
-\item This is a good point to add some further content in the
+
+
+
+
+
+This is a good point to add some further content in the
 form of a simple exercise.  Update the file
 \verb!theFirstActivity.tex!  you created above so that it looks like
 the following.
