--- a/ximeraUserManual/ximeraUserManual.tex
+++ b/ximeraUserManual/ximeraUserManual.tex
@@ -2,16 +2,18 @@
 
 \title{User Manual}
 \date{2024}
-\author{Bart Snapp}
+\author{Jim Fowler \and Wim Obbels \and Jason Nowell\and Bart Snapp}
 
 \input{preamble}
 
 \pdfOnly{\usepackage{manual}}
 
+%% These may change and should be checked!
 \newcommand{\docURL}{\url{https://github.com/ximeraProject/ximeraFirstSteps/ximeraUserManual}}
 \newcommand{\testURL}{\url{https://github.com/ximeraProject/tests}}
 \newcommand{\experimentalURL}{\url{https://github.com/ximeraProject/experimental}}
-
+\newcommand{\xfsURL}{https://go.osu.edu/xfs}
+\newcommand{\xfgURL}{https://go.osu.edu/ximera-flash-grant}
 
 \colorfalse
 \colortrue
