--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -25,7 +25,7 @@ choices when creating new content:
 Forking a repository is well-documented on
 \link[GitHub]{https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/working-with-forks/fork-a-repo}.
 Basically, you login to GitHub, return to this page, and at the top right there
-will be an option to "Fork" this repository. Fork the repo. Accept all
+will be an option to `Fork' this repository. Fork the repo. Accept all
 defaults, though you might want to change the name of the repository at this
 point. When done, it will take you to
 your copy of this repository on GitHub. It will be located someplace like:
