--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -79,8 +79,8 @@ The \verb|xourse| file for \textit{First Steps in Ximera} can be found here:
 This gets complicated because we insist that Ximera documents must compiled not
 only when in a \verb|xourse| file, but also individually.
 
-%\begin{tikzpicture}
-%\node{
+\begin{tikzpicture}
+\node{
 \begin{forest}
   for tree={
   font=\ttfamily,
@@ -117,8 +117,8 @@ only when in a \verb|xourse| file, but also individually.
     [tests
     ]
   ]
-\end{forest}%};
-%\end{tikzpicture}
+\end{forest}};
+\end{tikzpicture}
 
 In general the file with the \verb!xourse! document class specifies
 course information such as the name of the course, a description of
