--- a/ximeraUserManual/introduction/introduction.tex
+++ b/ximeraUserManual/introduction/introduction.tex
@@ -82,7 +82,7 @@ As a token of our appreciation, \textbf{consider applying for a Ximera
     Flash-Grant Stipend:}
 \begin{center}
     \qrcode{\xfgURL}\\
-    \small\url{\xfgURL}
+    \small\url{\protect\xfgURL}
 \end{center}
 Thank you for your interest in Ximera. We encourage you to contact the
 team with any questions you may have.
