--- a/aFirstStepInXimera.tex
+++ b/aFirstStepInXimera.tex
@@ -11,7 +11,7 @@
 \end{abstract}
 \maketitle
 
-\activity{basics/basicAnswerTypes.tex}
+\activity{basics/basicWorksheet.tex}
 \activity{basics/graphicsInteractives.tex}
 \practice{exercises/answer}
 \practice{exercises/multipleChoice}
