--- a/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
+++ b/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
@@ -65,7 +65,7 @@ that can be redefined for printing.
   \includegraphics[width=5in]{missionPatch.jpg}
 \end{image}
 We also support PDF and PNG file formats. We recommend enclosing graphics like
-this in either \verb|\begin{center} ... \end{center}| or \verb|image| as above.
+this in either \verb!\begin{center} ... \end{center}! or \verb|image| as above.
 The \textbf{only} difference is that if an author uses \verb|image|, they can
 redefine how graphics are dealt with via macros.
 
