--- a/ximeraUserManual/introduction/introduction.tex
+++ b/ximeraUserManual/introduction/introduction.tex
@@ -63,8 +63,8 @@ URL or an assignment in their LMS.
 or developer. To get started with Ximera, visit our
 \textit{First Steps in Ximera} GitHub repository:
 \begin{center}
-    \qrcode{\xfsURL}\\
-    \small\url{\xfsURL}
+    \qrcode{https://go.osu.edu/xfs}\\
+    \small\url{https://go.osu.edu/xfs}
 \end{center}
 \textbf{This document assumes you have completed the instructions there, and have
 successively deployed Ximera content online.}
@@ -81,8 +81,8 @@ Department of Mathematics, and the Affordable Learning Exchange at OSU.
 As a token of our appreciation, \textbf{consider applying for a Ximera
     Flash-Grant Stipend:}
 \begin{center}
-    \qrcode{\xfgURL}\\
-    \small\url{\protect\xfgURL}
+    \qrcode{https://go.osu.edu/ximera-flash-grant}\\
+    \small\url{https://go.osu.edu/ximera-flash-grant}
 \end{center}
 Thank you for your interest in Ximera. We encourage you to contact the
 team with any questions you may have.
