--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -2,7 +2,7 @@
 \author{Wim Obbels \and Bart Snapp}
 \license{CC: 0}
 
-\title{Basic Answer Types}
+\title{A basic worksheet}
 
 \begin{document}
 \begin{abstract}
@@ -84,26 +84,27 @@ Maybe you want a problem with one or more parts,
 \end{exercise}
 \end{exercise}
 
+Finally we can include pictures using \verb|includegraphics|. Here's an example of a question with a picture.
+\begin{question}
+    Here is a picture of the Ximera Octolion:
+    \begin{image}
+        \includegraphics[width=.3\textwidth]{missionPatch.jpg}
+    \end{image}
+    What's their name?
+    \[
+    \text{Name} = \answer[format=string]{xarlie}
+    \]
+    \begin{hint}
+        Their name begins with an ``X.''
+    \end{hint}
+    \begin{hint}
+        It ends with an ``arlie.''
+    \end{hint}
+    \begin{hint}
+        It's almost Karlie!
+    \end{hint}
+\end{question}
 
-\section{Basic graphics}
-Finally we can include pictures using \verb|includegraphics| like this
-
-Here we see an included a JPEG and a PNG:
-
-\begin{verbatim}
-\begin{image}
-  \includegraphics[width=.3\textwidth]{missionPatch.jpg}\qquad
-  \includegraphics[width=3in]{mx.png}
-\end{image}
-\end{verbatim}
-In the code above, the command image is just a Ximera provided wrapper
-that can be redefined for printing.
-\begin{center}
-  \includegraphics[width=5in]{missionPatch.jpg}\qquad\includegraphics[width=5in]{mx.png}
-\end{center}
-Here we have a pdf
-\begin{image}
-  \includegraphics{llama.pdf}
-\end{image}
+We include JPGs and PDFs in exactly the same way.
 
 \end{document}
