--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -87,12 +87,12 @@ Maybe you want a problem with one or more parts,
 Finally we can include pictures using \verb|includegraphics|. Here's an example of a question with a picture.
 \begin{question}
     Here is a picture of the Ximera Octolion:
-    \begin{image}
-        \includegraphics[width=.3\textwidth]{missionPatch.jpg}
-    \end{image}
+    \begin{center}
+        \includegraphics[width=2in]{missionPatch.jpg}
+    \end{center}
     What's their name?
     \[
-    \text{Name} = \answer[format=string]{xarlie}
+    \text{Name} = \answer[format=string]{Xarlie}
     \]
     \begin{hint}
         Their name begins with an ``X.''
