--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -48,6 +48,8 @@ Now students can check their understanding:
     \end{enumerate}
 \end{question}
 
+You can see the source code for this file by appending \verb|.tex| to the end of the URL. 
+
 
 \section{Basic exercises}
 
