--- a/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
+++ b/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
@@ -31,6 +31,7 @@ The preferred way to include graphics is with TikZ.
   \end{tikzpicture}
 \end{image}
 
+\begin{example}
 \begin{verbatim}
 \begin{image}
   \begin{tikzpicture}
@@ -50,40 +51,7 @@ The preferred way to include graphics is with TikZ.
   \end{tikzpicture}
 \end{image}
 \end{verbatim}
-
-Another method is to use \verb|\includegraphics|. Here we see an included a
-JPG:
-
-\begin{verbatim}
-\begin{image}
-  \includegraphics[width=.3\textwidth]{missionPatch.jpg}\qquad
-\end{image}
-\end{verbatim}
-In the code above, the command image is just a Ximera provided wrapper
-that can be redefined for printing.
-\begin{image}
-  \includegraphics[width=5in]{missionPatch.jpg}
-\end{image}
-We also support PDF and PNG file formats. We recommend enclosing graphics like
-this in either \verb!\begin{center} ... \end{center}! or \verb|image| as above.
-The \textbf{only} difference is that if an author uses \verb|image|, they can
-redefine how graphics are dealt with via macros.
-
-
-
-
-\section{Videos}
-
-We can embed YouTube Videos with something like
-\begin{code}
-  \begin{center}
-    \youtube{FvgF95i0_lw}
-  \end{center}
-\end{code}
-which would embed the video into the page, like this:
-\begin{center}
-  \youtube{FvgF95i0_lw}
-\end{center}
+\end{example}
 
 \section{The graph command}
 
@@ -97,118 +65,88 @@ graph is produced.
 There are a number of options for the \verb|\graph| command:
 
 \paragraph{Change viewing window}
-\begin{verbatim}
 \[
-\graph[xmin=-5,xmax=5,ymin=-5,ymax=5]{y=x^2}
+  \graph[xmin=-5,xmax=5,ymin=-5,ymax=5]{y=x^2}
 \]
-\end{verbatim}
 
 \paragraph{Restricting domain}
-
-\begin{verbatim}
 \[
-\graph{x^2 \left\{ 1 \leq x \leq 10 \right\} }
+  \graph{x^2 \left\{ 1 \leq x \leq 10 \right\} }
 \]
-\end{verbatim}
-\paragraph{Default panel displayed}
 
-\begin{verbatim}
-\[
-\graph[panel]{x^2}
-\]
-\end{verbatim}
-\paragraph{Restricting window}
-
-\begin{verbatim}
-\[
-\graph[xmin=0, xmax=10, ymin=0, ymax=10]{x^2}
-\]
-\end{verbatim}
-\paragraph{Axis labels}
-
-\begin{verbatim}
-\[
-\graph[xAxisLabel="time", yAxisLabel="distance"]{y=x}
-\]
-\end{verbatim}
-\paragraph{Hide axes}
-
-\begin{verbatim}
-\[
-\graph[hideXAxis=true, hideYAxis=true]{x^2}
-\]
-\end{verbatim}
-\paragraph{Hide tick marks}
-
-\begin{verbatim}
-\[
-\graph[hideXAxisNumbers=true, hideYAxisNumbers=true]{x=y^2}
-\]
-\end{verbatim}
-\paragraph{Polar graphing}
-
-\begin{verbatim}
-\[
-\graph{r=\theta}
-\]
-\end{verbatim}
-\paragraph{Polar gridlines}
-
-\begin{verbatim}
-\[
-\graph[polar]{y=x^2}
-\]
-\end{verbatim}
 \paragraph{Graphing a piecewise function}
 
+\begin{example}
 \begin{verbatim}
 \[
 \graph{ \sin(x)\left\{x<0\right\}, 2x\left\{ x>=0 \right\} }
 \]
 \end{verbatim}
+\end{example}
 
-\section{Desmos}
+\begin{description}
+  \item[\texttt{xmin},\texttt{ymin}, \texttt{xmax},\texttt{ymax}] These set the
+    size of the viewing window with \verb|\graph[xmin=-5,xmax=5,ymin=-5,ymax=5]{y=x^2}|.
+\end{description}
+
+\section{Videos}
+
+We can embed YouTube Videos with something like
+\begin{example}
+\begin{verbatim}
+\begin{center}
+\youtube{FvgF95i0_lw}
+\end{center}
+\end{verbatim}
+\end{example}
+
+which would embed the video into the page, like this:
+\begin{center}
+  \youtube{FvgF95i0_lw}
+\end{center}
+
+\section{Desmos, Desmos 3D, and GeoGebra}
 
 If you require further features from
 \link[Desmos]{https://www.desmos.com/}, you can sign up for an account
 and include your worksheets like this:
-
+\begin{example}
 \begin{verbatim}
 \begin{center}
 \desmos{zwywds7med}{800}{600}
 \end{center}
 \end{verbatim}
+\end{example}
+which renders as:
 \begin{center}
   \desmos{zwywds7med}{800}{600}
 \end{center}
 
-\section{How to embed GeoGebra}
+The syntax for Desmos 3D is similar:
+\begin{example}
+\begin{verbatim}
+\begin{center}
+\desmosThreeD{bb4exrhrl3}{800}{600}
+\end{center}
+\end{verbatim}
+\end{example}
+Seen here:
+\begin{center}
+  \desmosThreeD{bb4exrhrl3}{800}{600}
+\end{center}
 
 You can also use \link[GeoGebra]{https://www.geogebra.org/}. Embed the
 widget using the syntax \verb|\geogebra{ID}{width}{height}|, where ID
 is the widget ID and width and height are the dimensions (in pixels)
 you want the embedded widget to have.
+\begin{verbatim}
+  \begin{center}
+  \geogebra{XC3FXUdJ}{800}{600}
+  \end{center}
+\end{verbatim}
 
 \begin{center}
   \geogebra{XC3FXUdJ}{800}{600}%%https://www.geogebra.org/m/XC3FXUdJ
 \end{center}
 
-The above embedding is generated via the code:
-
-\begin{verbatim}
-            \begin{center}
-            \geogebra{XC3FXUdJ}{800}{600}
-            \end{center}
-        \end{verbatim}
-
-\section{How to embed Desmos 3D}
-
-\begin{center}
-  \desmosThreeD{bb4exrhrl3}{800}{600}
-\end{center}
-\begin{verbatim}
-          \begin{center}
-          \desmosThreeD{bb4exrhrl3}{800}{600}
-          \end{center}
-      \end{verbatim}
 \end{document}
