--- a/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
+++ b/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
@@ -139,12 +139,13 @@ You can also use \link[GeoGebra]{https://www.geogebra.org/}. Embed the
 widget using the syntax \verb|\geogebra{ID}{width}{height}|, where ID
 is the widget ID and width and height are the dimensions (in pixels)
 you want the embedded widget to have.
+\begin{example}
 \begin{verbatim}
-  \begin{center}
-  \geogebra{XC3FXUdJ}{800}{600}
-  \end{center}
+\begin{center}
+\geogebra{XC3FXUdJ}{800}{600}
+\end{center}
 \end{verbatim}
-
+\end{example}
 \begin{center}
   \geogebra{XC3FXUdJ}{800}{600}%%https://www.geogebra.org/m/XC3FXUdJ
 \end{center}
