--- a/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
+++ b/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
@@ -32,7 +32,7 @@ The preferred way to include graphics is with TikZ.
 \end{image}
 
 \begin{example}
-\begin{verbatim}
+  \begin{verbatim}
 \begin{image}
   \begin{tikzpicture}
     \begin{axis}[
@@ -60,9 +60,18 @@ The easiest way to include an interactive graph is to use the
 doesn't draw a graph in the PDF, rather, it states (in words) that a
 graph is produced.
 \[
-  \graph{x^2}
+  \graph{x^2,x^3}
 \]
 There are a number of options for the \verb|\graph| command:
+
+\begin{example}
+\begin{verbatim}
+\graph{x^2 \left\{ 1 \leq x \leq 10 \right\}
+\graph{ \sin(x)\left\{x<0\right\}, 2x\left\{ x>=0 \right\} } 
+\graph{r=\theta}  
+\graph{x^2,x^3}
+\end{verbatim}
+\end{example}
 
 \paragraph{Change viewing window}
 \[
@@ -77,23 +86,41 @@ There are a number of options for the \verb|\graph| command:
 \paragraph{Graphing a piecewise function}
 
 \begin{example}
-\begin{verbatim}
+  \begin{verbatim}
 \[
 \graph{ \sin(x)\left\{x<0\right\}, 2x\left\{ x>=0 \right\} }
 \]
 \end{verbatim}
 \end{example}
 
+
+
+
+
+\paragraph{Optional arguments for \texttt{\textbackslash graph}}
+
 \begin{description}
-  \item[\texttt{xmin},\texttt{ymin}, \texttt{xmax},\texttt{ymax}] These set the
-    size of the viewing window with \verb|\graph[xmin=-5,xmax=5,ymin=-5,ymax=5]{y=x^2}|.
+  \item[xmin, ymin, xmax, ymax] These set the
+    size of the viewing window with
+    \verb|\graph[xmin=-5,xmax=5,ymin=-5,ymax=5]{y=x^2}|.
+  \item[panel] Determines if the panel is shown with
+    \verb|\graph[panel]{y=x^2}|.
+  \item[xAxisLabel, yAxisLabel] Gives the axes labels with \verb|\graph[xAxisLabel="time", yAxisLabel="distance"]{y=x^2}|.
+  \item[hideXAxis, hideYAxis] Hides the axes with 
+  \verb|\graph[hideXAxis=true, hideYAxis=true]{x^2}|.
+  \item[hideXAxisNumbers=true, hideYAxisNumbers=true] Hides the tick marks on the axes with \verb|\graph[hideXAxisNumbers=true, hideYAxisNumbers=true]{y=x^2}|.
+  \item[polar] Shows polar grid lines with \verb|\graph[polar]{y=x^2}|.
 \end{description}
+
+
+\graph{x^2 \left\{ 1 \leq x \leq 10 \right\}
+\graph{ \sin(x)\left\{x<0\right\}, 2x\left\{ x>=0 \right\} }  
 
 \section{Videos}
 
 We can embed YouTube Videos with something like
 \begin{example}
-\begin{verbatim}
+  \begin{verbatim}
 \begin{center}
 \youtube{FvgF95i0_lw}
 \end{center}
@@ -111,7 +138,7 @@ If you require further features from
 \link[Desmos]{https://www.desmos.com/}, you can sign up for an account
 and include your worksheets like this:
 \begin{example}
-\begin{verbatim}
+  \begin{verbatim}
 \begin{center}
 \desmos{zwywds7med}{800}{600}
 \end{center}
@@ -124,7 +151,7 @@ which renders as:
 
 The syntax for Desmos 3D is similar:
 \begin{example}
-\begin{verbatim}
+  \begin{verbatim}
 \begin{center}
 \desmosThreeD{bb4exrhrl3}{800}{600}
 \end{center}
@@ -140,7 +167,7 @@ widget using the syntax \verb|\geogebra{ID}{width}{height}|, where ID
 is the widget ID and width and height are the dimensions (in pixels)
 you want the embedded widget to have.
 \begin{example}
-\begin{verbatim}
+  \begin{verbatim}
 \begin{center}
 \geogebra{XC3FXUdJ}{800}{600}
 \end{center}
