--- a/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
+++ b/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
@@ -112,10 +112,10 @@ There are a number of options for the \verb|\graph| command:
   \item[polar] Shows polar grid lines with \verb|\graph[polar]{y=x^2}|.
 \end{description}
 
-
-\graph{x^2 \left\{ 1 \leq x \leq 10 \right\}
+\[
+\graph{x^2 \left\{ 1 \leq x \leq 10 \right\}}
 \graph{ \sin(x)\left\{x<0\right\}, 2x\left\{ x>=0 \right\} }  
-
+\]
 \section{Videos}
 
 We can embed YouTube Videos with something like
