--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -38,11 +38,13 @@ user-space) onto your computer. \textbf{If you are using Windows, be sure to
   clone through WSL.}
 After the repository is on your computer, delete all files \textbf{except:}
 \begin{itemize}
-  \item \verb|.gitignore|,
-  \item \verb|DOTximeraserve|,
-  \item \verb|.vscode|,
-  \item \verb|scripts|, and
-  \item \verb|.git|.
+  \item \texttt{.gitignore}
+  \item \texttt{DOTximeraserve}
+  \item \texttt{.vscode}
+  \item \texttt{scripts}
+  \item \texttt{.git}
+  \item \texttt{README.md}
+  \item \texttt{NOT-THE-LICENSE.md}
 \end{itemize}
 You must keep the files above.	Commit your changes to GitHub and view your
 repository online via a web browser to ensure that the files were deleted.
@@ -51,9 +53,11 @@ repository online via a web browser to ensure that the files were deleted.
 
 Starting from an existing GitHub repository, you will need to \textbf{copy}
 \begin{itemize}
-  \item \verb|.gitignore|,
-  \item \verb|.vscode|, and
-  \item \verb|scripts|
+  \item \texttt{gitignore}
+  \item \texttt{.vscode}
+  \item \texttt{scripts}
+  \item \texttt{README.md}
+  \item \texttt{NOT-THE-LICENSE.md}
 \end{itemize}
 into your repository. If you already have a \verb|.gitignore| file, we suggest
 you replace yours with ours. Commit your changes to GitHub and view your
@@ -61,7 +65,7 @@ repository online via a web browser to ensure that the files were added.
 
 \section{Setting up a Ximera \texttt{xourse}}
 
-Ximera documents can be ``taped'' together using the \verb|xourse| document
+Ximera documents can be ``taped'' together using the \texttt{xourse} document
 class.
 A \verb|xourse| file is basically a list of other \verb|ximera| files and even
 other \verb|xourse| files.
