--- a/ximeraUserManual/courses/courses.tex
+++ b/ximeraUserManual/courses/courses.tex
@@ -22,7 +22,7 @@ This section is about ``best practices'' when writing a book
 \end{itemize}
 
 \begin{example}
-\begin{verbatim} 
+    \begin{verbatim} 
 %% where to look for inputs
 \makeatletter
 \def\input@path{
@@ -34,9 +34,10 @@ This section is about ``best practices'' when writing a book
 \end{verbatim}
 \end{example}
 
-NOTE -- I think the input path is AUTOMATICALLY part of the graphics path. Please CHECK
+NOTE -- I think the input path is AUTOMATICALLY part of the graphics path.
+Please CHECK
 \begin{example}
-\begin{verbatim}
+    \begin{verbatim}
 %% where to find images
 \graphicspath{  
 {./}
@@ -44,6 +45,5 @@ NOTE -- I think the input path is AUTOMATICALLY part of the graphics path. Pleas
 }    
 \end{verbatim}
 \end{example}
-    
-    
-    \end{document}
+
+\end{document}
