--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -54,7 +54,12 @@ git commit -m "Added first activity file"
 \section{Deploying and debugging}
 
 
-
-
+\begin{example}
+\begin{verbatim}
+./scripts/xmlatex -i bash
+xake -v compile FILE-NAME.tex
+pdflatex FILE-NAME.tex
+\end{verbatim}
+\end{example}
 
 \end{document}
