--- a/ximeraUserManual/manual.sty
+++ b/ximeraUserManual/manual.sty
@@ -32,11 +32,6 @@
 %\renewcommand{\date}[1]{\def\thedate{#1}}
 %\newcommand{\thedate}{}
 
-% Fancy Headers and Footers
-\renewcommand{\headrulewidth}{0pt}
-
-
-
 
 % Frame Environment
 \NewEnviron{xframe}{
@@ -62,6 +57,12 @@
   fontcolor=textColor,
   backgroundcolor=background
 ]{example}%
+
+
+
+% Fancy Headers and Footers
+\renewcommand{\headrulewidth}{0pt}
+
 
 
 
@@ -109,7 +110,7 @@
   \end{scope}
   %\draw[step=1cm,gray,very thin] (0,0) grid (71,10);
 \end{tikzpicture}}%
-\resizebox{!}{.7em}{\lsstyle User\,Manual}\hfill \theevent: \thedate \\[-.1cm]
+\resizebox{!}{.7em}{\lsstyle User\,Manual}\hfill  \thedate \\[-.1cm]
 \rule{\textwidth}{.1cm}\\[0cm]\rmfamily
 Email:~{\tt ximera@math.osu.edu} \hfill Website:~{\tt https://github.com/ximeraProject/}
 }
