--- a/ximeraUserManual/introduction/introduction.tex
+++ b/ximeraUserManual/introduction/introduction.tex
@@ -66,8 +66,9 @@ or developer. To get started with Ximera, visit our
     \qrcode{https://go.osu.edu/xfs}\\
     \small\url{https://go.osu.edu/xfs}
 \end{center}
-\textbf{This document assumes you have completed the instructions there, and have
-successively deployed Ximera content online.}
+\textbf{This document assumes you have completed the instructions there, and
+    have
+    successively deployed Ximera content online.}
 
 \paragraph{Funding for the Ximera Project} is provided by
 a U.S.\ Department of Education Open Textbooks Pilot Program grant in the
@@ -77,7 +78,6 @@ also received support from NSF Grant DUE-1245433, the Shuttleworth
 Foundation, the Ohio State University
 Department of Mathematics, and the Affordable Learning Exchange at OSU.
 
-
 As a token of our appreciation, \textbf{consider applying for a Ximera
     Flash-Grant Stipend:}
 \begin{center}
@@ -86,4 +86,13 @@ As a token of our appreciation, \textbf{consider applying for a Ximera
 \end{center}
 Thank you for your interest in Ximera. We encourage you to contact the
 team with any questions you may have.
+
+\paragraph{The authors} listed on the cover are the current Ximera lead
+developers. In reality, this document has many authors as it is part of an
+evolution of Ximera documentation. Rodney Austin, Oscar Levin, Matt Thomas, and Hans
+Parshall authored parts of the either the document class or original
+documentation.
+
+In particular, we should mention the contribution of Claire Merriman, who worked to reshape much of our
+previous content into this current User Manual.
 \end{document}
