--- a/ximeraUserManual/introduction/introduction.tex
+++ b/ximeraUserManual/introduction/introduction.tex
@@ -93,6 +93,6 @@ evolution of Ximera documentation. Rodney Austin, Oscar Levin, Matt Thomas, and 
 Parshall authored parts of the either the document class or original
 documentation.
 
-In particular, we should mention the contribution of Claire Merriman, who worked to reshape much of our
+In particular, we should mention the contributions of Claire Merriman, who worked to reshape much of our
 previous content into this current User Manual.
 \end{document}
