--- a/ximeraUserManual/manual.sty
+++ b/ximeraUserManual/manual.sty
@@ -8,6 +8,9 @@
 \RequirePackage[landscape,includehead,includefoot,margin=2.5cm,headheight=1cm]{geometry}
 \RequirePackage{stix2}
 \RequirePackage{gillius}
+\RequirePackage[scale=.85]{FiraMono}
+%  \renewcommand*\familydefault{\ttdefault} %% Only if the base font of the document is to be typewriter style
+\RequirePackage[T1]{fontenc}
 %\RequirePackage{multicol}
 %\RequirePackage{environ}
 \RequirePackage{lettrine}
