--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -78,47 +78,65 @@ The \verb|xourse| file for \textit{First Steps in Ximera} can be found here:
 This gets complicated because we insist that Ximera documents must compiled not
 only when in a \verb|xourse| file, but also individually.
 \begin{center}
-  \begin{tikzpicture}%https://tex.stackexchange.com/questions/5073/making-a-simple-directory-tree
-    \node {HELLO};
-    \node{
-      \begin{forest}
-        for tree={
-        font=\ttfamily,
-        grow'=0,
-        child anchor=west,
-        parent anchor=south,
-        anchor=west,
-        calign=first,
-        inner xsep=7pt,
-        edge path={
-            \noexpand\path [draw, \forestoption{edge}]
-            (!u.south west) +(7.5pt,0) |- (.child anchor) pic {folder}
-            \forestoption{edge label};
-          },
-        before typesetting nodes={
-            if n=1
-              {insert before={[,phantom]}}
-              {}
-          },
-        fit=band,
-        before computing xy={l=15pt},
-        }
-        [system
-          [config
-          ]
-          [lib
-              [Access
-              ]
-              [Plugin
-              ]
-          ]
-          [templates
-          ]
-          [tests
-          ]
-        ]
-      \end{forest}};
-  \end{tikzpicture}
+  \resizebox{\columnwidth}{!}{
+  \begin{tikzpicture}
+    % Define styles for nodes
+    \tikzstyle{document} = [anchor=north west,draw, rounded corners, rectangle,
+    minimum width=3cm,fill=white, minimum height=.8cm, ultra
+    thick,font=\ttfamily]
+    \tikzstyle{folder} = [anchor=north west,draw, rectangle, rounded corners,
+    minimum width=4cm,fill=white, minimum height=2.8cm, ultra
+    thick,font=\ttfamily]
+
+    % Thick grey lines
+    \draw[line width=200pt,white!85!black,line cap=round] (2,2) -- (2,-2);
+    \draw[line width=200pt,white!85!black,line cap=round] (10,2) -- (10,-2);
+    \draw[line width=200pt,white!85!black,line cap=round] (18,2) -- (18,-2);
+
+    % Connections
+    \draw[ultra thick] (2,-1.5) -- (8,2.6);
+    \draw[ultra thick] (2,-1.5) -- (8,1.6);
+    \draw[ultra thick] (2,-1.5) -- (8,.6);
+    \draw[ultra thick] (2,-1.5) -- (8,-1.4);
+
+    \draw[ultra thick] (11,-2.5) -- (16,2.6);
+    \draw[ultra thick] (11,-2.5) -- (16,1.6);
+    \draw[ultra thick] (11,-2.5) -- (16,.6);
+    \draw[ultra thick] (11,-2.5) -- (16,-.4);
+    \draw[ultra thick] (11,-2.5) -- (16,-1.4);
+    \draw[ultra thick] (11,-2.5) -- (16,-2.4);
+
+    % Symbols at top
+    \node at (2,4) {\Huge \tt ./};
+    \node at (10,4) {\Huge \tt ../};
+    \node at (18,4) {\Huge \tt ../../};
+
+    % Define the folders at top level
+    \node[document] at (0,3) {preamble.tex};
+    \node[document] at (0,2) {aFirstStepInXimera.tex};
+    \node[folder] at (0,1) {basics};
+
+    % Define the documents in the basics folder
+    \node[document] at (8,3) {basicWorksheet.tex};
+    \node[document] at (8,2) {missionPatch.jpg};
+    \node[document] at (8,1) {graphicsInteractives.tex};
+    \node[folder] at (8,0) {exercises};
+
+    % Define the documents in the exercises folder
+    \node[document] at (16,3) {exerciseList.tex};
+    \node[document] at (16,2) {answer.tex};
+    \node[document] at (16,1) {multipleChoice.tex};
+    \node[document] at (16,0) {selectAll.tex};
+    \node[document] at (16,-1) {wordChoice.tex};
+    \node[document] at (16,-2) {hintsAndFollowUp.tex};
+
+    % paths at bottom
+    \node at (2,-3) {\tt\textbackslash input\{./preamble\}};
+    \node at (2,-3.5) {or};
+    \node at (2,-4) {\tt\textbackslash input\{preamble\}};
+    \node at (10,-4) {\tt\textbackslash input\{../preamble\}};
+    \node at (18,-4) {\tt\textbackslash input\{../../preamble\}};
+\end{tikzpicture}}
 \end{center}
 
 In general the file with the \verb!xourse! document class specifies
