--- a/ximeraUserManual/setup/setup.tex
+++ b/ximeraUserManual/setup/setup.tex
@@ -78,7 +78,7 @@ The \verb|xourse| file for \textit{First Steps in Ximera} can be found here:
 This gets complicated because we insist that Ximera documents must compiled not
 only when in a \verb|xourse| file, but also individually.
 \begin{center}
-  \resizebox{\columnwidth}{!}{
+  \resizebox{!}{5cm}{
   \begin{tikzpicture}
     % Define styles for nodes
     \tikzstyle{document} = [anchor=north west,draw, rounded corners, rectangle,
